--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -209,6 +209,10 @@
                             A distinction awarded to students with outstanding marks
                             and examplary behavior
                         </p>
+
+                        <a href="/assets/pdf/1GCC-élève-méritant.pdf" class="normal-link" target="_blank">
+                            1GCC-élève-méritant.pdf<img src="/assets/svg/logos/link.svg" alt="link symbol">
+                        </a>
                     </div>
 
                     <div class="column-box">
@@ -218,6 +222,10 @@
                             Award for outstanding performance in Accounting, Business Economics & Political 
                             Economy which is awarded to only 40 Students in Luxembourg each year
                         </p>
+
+                        <a href="MISSING" class="normal-link" target="_blank">
+                            MISSING<img src="/assets/svg/logos/link.svg" alt="link symbol">
+                        </a>
                     </div>
 
                     <div class="column-box">
@@ -227,6 +235,10 @@
                             A distinction awarded to students with outstanding marks
                             and examplary behavior
                         </p>
+
+                        <a href="/assets/pdf/2GCC-élève-méritant.pdf" class="normal-link" target="_blank">
+                            2GCC-élève-méritant.pdf<img src="/assets/svg/logos/link.svg" alt="link symbol">
+                        </a>
                     </div>
 
                     <div class="column-box">
@@ -235,6 +247,10 @@
                         <p>
                             A voluntary event for students to visit a company for one day (entrepreneurship & career guidance)
                         </p>
+
+                        <a href="/assets/pdf/Trendiction-SA-Job-Shadow-Day.pdf" class="normal-link" target="_blank">
+                            Trendiction-SA-Job-Shadow-Day.pdf<img src="/assets/svg/logos/link.svg" alt="link symbol">
+                        </a>
                     </div>
 
                     <div class="column-box">
@@ -243,6 +259,10 @@
                         <p>
                             Rewarded to students for their regular use of the library, a quiet place to do homework and research
                         </p>
+
+                        <a href="/assets/pdf/Aktiv-Plang-2023.pdf" class="normal-link" target="_blank">
+                            Aktiv-Plang-2023.pdf<img src="/assets/svg/logos/link.svg" alt="link symbol">
+                        </a>
                     </div>
 
                     <div class="column-box">
@@ -251,6 +271,10 @@
                         <p>
                             A programm that allowed Luxembourgish high school students to run a small company for a year, developing their entrepreneurial spirit and skills.
                         </p>
+
+                        <a href="/assets/pdf/Mini-Entreprise-CLIK-2023.pdf" class="normal-link" target="_blank">
+                            Mini-Entreprise-CLIK-2023.pdf BAD RESOLUTION RETAKE<img src="/assets/svg/logos/link.svg" alt="link symbol">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -1298,6 +1322,40 @@
                                         </a>
                                         
                                         <span class="tooltiptext">Affinity Photo</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                <div class="accordion-container">
+                                    <span class="gray-1"><b>B2</b> Intermediate +</span>
+                                    <span class="white-2">Desktop Publishing</span>
+                                </div>
+
+                                <div class="accordion-container">
+                                    <img class="plus" src="/assets/svg/logos/plus-symbol-logo.svg" alt="Plus Symbol">
+                                </div>
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                <ul class="skills-list">
+                                    <li>Proficient in using Affinity Publisher for creating and designing professional documents, such as brochures, reports, and marketing materials.</li>
+                                    <li>Skilled in layout design, typography, and document formatting, ensuring high-quality presentations and publications for financial and business purposes.</li>
+                                </ul>
+
+                                <span class="gray-1">Tech Stack</span>
+
+                                <div class="tech-list">
+                                    <div class="tooltip">
+                                        <a href="https://affinity.serif.com/en-us/publisher/" target="_blank">
+                                            <img src="/assets/svg/logos/photo-icon.svg" alt="Affinity Publisher">
+                                        </a>
+                                        
+                                        <span class="tooltiptext">Affinity Publisher</span>
                                     </div>
                                 </div>
                             </div>
